# shadabase

./: CMakeLists.txt  README.md
example/http_client/: CMakeLists.txt  main.cpp
include/shadabase/: util.hpp
include/shadabase/network/: httpclient.hpp
include/shadabase/network/impl/: httpclient.ipp
